@@ -10,6 +10,7 @@ import logging
 import time
 import os
 import re
+import errno
 
 from copy import copy
 from optparse import OptionParser, Option, OptionValueError, IndentedHelpFormatter
@@ -516,7 +517,16 @@ def run_configure(config_file):
 			val = raw_input("Retry configuration? [Y/n] ")
 			if val.lower().startswith("n"):
 				raise EOFError()
+
+		## Overwrite existing config file, make it user-readable only
+		old_mask = os.umask(0077)
+		try:
+			os.remove(config_file)
+		except OSError, e:
+			if e.errno != errno.ENOENT:
+				raise
 		f = open(config_file, "w")
+		os.umask(old_mask)
 		cfg.dump_config(f)
 		f.close()
 		output("Configuration saved to '%s'" % config_file)
