@@ -1,3 +1,9 @@
+2007-09-25  Michal Ludvig  <michal@logix.cz>
+
+	* S3/S3.py: Don't fail if bucket listing doesn't have
+	  <IsTruncated> node.
+	* s3cmd: Create ~/.s3cfg with 0600 permissions.
+
 2007-09-13  Michal Ludvig  <michal@logix.cz>
 
 	* s3cmd: Improved 'sync'
